--- a/.github/workflows/wakatime-stats.yml
+++ b/.github/workflows/wakatime-stats.yml
@@ -1,24 +1,21 @@
- name: Wakatime Stats
+name: Work Stats Readme
 
- on:
- workflow_dispatch:
- schedule:
- - cron: '0 0 * * *'  # Run at midnight every day
+on:
+  workflow_dispatch:
+  schedule:
+    # Runs every 2 hours
+    - cron: "0 */2 * * *"
 
- jobs:
- update-readme-with-wakatime-stats:
- name: Update README with Wakatime stats
- runs-on: ubuntu-latest
-
- steps:
-   - name: Checkout code
-     uses: actions/checkout@v2
-
-   - uses: claserre9/wakatime-stats@vmaster
-     with:
-       WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-       WAKATIME_USER_ID: ${{ secrets.WAKATIME_USER_ID }}
-       GH_TOKEN: ${{ secrets.GH_TOKEN }}
-       TABLE_STYLE: 'default' # (optional) can be 'default','box' or 'box-double'
-       MAX_LANGUAGES: '5' # (optional) any number > 5, if under 5, this will be set to 5
-       WAKATIME_TIME_RANGE: 'all_time' # (optional) can be 'last_7_days', 'last_30_days', 'last_6_months' or 'last_year'
+jobs:
+  update-readme:
+    name: Update this repo's README
+    runs-on: ubuntu-latest
+    steps:
+      - uses: athul/waka-readme@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          WAKATIME_USER_ID: ${{ secrets.WAKATIME_USER_ID }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          TABLE_STYLE: 'default' # (optional) can be 'default','box' or 'box-double'
+          MAX_LANGUAGES: '5' # (optional) any number > 5, if under 5, this will be set to 5
+          WAKATIME_TIME_RANGE: 'all_time' # (optional) can be 'last_7_days', 'last_30_days', 'last_6_months' or 'last_year'
