--- a/.github/workflows/wakatime-stats.yml
+++ b/.github/workflows/wakatime-stats.yml
@@ -16,6 +16,6 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           WAKATIME_USER_ID: ${{ secrets.WAKATIME_USER_ID }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          TABLE_STYLE: 'default' # (optional) can be 'default','box' or 'box-double'
+          TABLE_STYLE: 'box' # (optional) can be 'default','box' or 'box-double'
           MAX_LANGUAGES: '5' # (optional) any number > 5, if under 5, this will be set to 5
           WAKATIME_TIME_RANGE: 'all_time' # (optional) can be 'last_7_days', 'last_30_days', 'last_6_months' or 'last_year'
